<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/main_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_layout_margin_top"
                android:layout_marginBottom="@dimen/form_layout_margin_bottom">

            <include layout="@layout/occurrence_details_layout"/>

            <TextView
                    android:id="@+id/occurrence_location_header"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/form_header_padding"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/form_header_size"
                    android:text="@string/ol_title"/>

            <Button
                    android:id="@+id/btnSearchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/btnGreen"
                    android:text="@string/search_oc_location"
                    android:textAllCaps="false"
                    android:drawableStart="@drawable/ic_search_white_24dp"
                    android:drawablePadding="30dp"
                    android:padding="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_layout_margin_top"
                android:orientation="vertical"
                android:gravity="bottom|end" >
            <Button
                    android:id="@+id/btnNext"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/btn_next"
                    android:background="@color/btnGreen"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>